--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "uns-typescript-lib-template",
+  "name": "properties-manager-js",
   "version": "1.0.0",
-  "description": "A template to create Typescript Libraries",
+  "description": "properties-manager-js - auto-generated from template",
   "author": "Ulises Schreiner",
   "license": "MIT",
   "type": "module",
@@ -33,7 +33,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "docs": "typedoc",
-    "init-template": "node scripts/init-template.js",
+    "init-template": "node scripts/init-template.mjs",
     "prerelease:checks": "npm run lint && npm run typecheck && npm run test:coverage && npm run build",
     "release:patch": "npm run prerelease:checks && standard-version --release-as patch && git push --follow-tags && npm publish --access public",
     "release:minor": "npm run prerelease:checks && standard-version --release-as minor && git push --follow-tags && npm publish --access public",
