chore(release): 0.0.1-rc.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "properties-manager-js",
-  "version": "0.0.0",
+  "version": "0.0.1-rc.0",
   "description": "properties-manager-js - auto-generated from template",
   "author": "Ulises Schreiner",
   "license": "MIT",
